update de las direcciones de fpfc y actualizacion de botones
Se actualizaron las direcciones al servidor del fideicomiso, se arregló el error que habia dejado la empresa anterior con la ventana de registro, todos los botones tienen el diseño que se habia desarrollado con anterioridad, tambien está funcional la parte de los sms con sofmex (ver en el api)

--- a/LineaExpres/app/src/main/res/layout/content_main.xml
+++ b/LineaExpres/app/src/main/res/layout/content_main.xml
@@ -59,7 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_cart_m"
-        app:backgroundTint="#57348B"
+        app:backgroundTint="@android:color/holo_blue_bright"
         app:layout_anchor="@id/bottomAppBar"
         app:maxImageSize="35dp" />
 
