--- a/LineaExpres/app/src/main/res/layout/fragment_cambio_vehiculo.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_cambio_vehiculo.xml
@@ -229,14 +229,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/BtnUploadCirculationCard"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
-                android:textSize="@dimen/globalFontSize"
                 android:text="@string/BtnUploadCirculationCard"
-                style="@style/buttons"
+                android:textSize="@dimen/globalFontSize"
                 app:layout_constraintBottom_toTopOf="@+id/SentriPhotoImageView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -253,14 +253,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnUploadNewSentriOrRenewal"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
-                android:textSize="@dimen/globalFontSize"
                 android:text="@string/BtnUploadNewSentriOrRenowal"
-                style="@style/buttons"
+                android:textSize="@dimen/globalFontSize"
                 app:layout_constraintBottom_toTopOf="@+id/SentriPhotoImageView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -278,14 +278,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/BtnUploadInsurancePolicy"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
-                style="@style/buttons"
-                android:textSize="@dimen/globalFontSize"
                 android:text="@string/BtnUploadInsurancePolicy"
+                android:textSize="@dimen/globalFontSize"
                 app:layout_constraintBottom_toTopOf="@+id/SentriPhotoImageView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -303,15 +303,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/BtnUploadInsurancePolicySecond"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
-
                 android:fontFamily="@font/montserrat_bold"
-                style="@style/buttons"
-                android:textSize="@dimen/globalFontSize"
                 android:text="Poliza Hoja 2 (si aplica)"
+                android:textSize="@dimen/globalFontSize"
                 app:layout_constraintBottom_toTopOf="@+id/SentriPhotoImageView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -328,14 +327,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/BtnUploadUSAApproval"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
-                style="@style/buttons"
-                android:textSize="@dimen/globalFontSize"
                 android:text="@string/BtnUploadUSAApproval"
+                android:textSize="@dimen/globalFontSize"
                 app:layout_constraintBottom_toTopOf="@+id/SentriPhotoImageView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -352,14 +351,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/BtnUploadPowerAttorney"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
-                style="@style/buttons"
-                android:textSize="@dimen/globalFontSize"
                 android:text="@string/BtnUploadPowerAttorney"
+                android:textSize="@dimen/globalFontSize"
                 app:layout_constraintBottom_toTopOf="@+id/SentriPhotoImageView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -484,30 +483,29 @@
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/clear_button"
                         android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_margin="5dp"
-                        android:backgroundTint="#57348B"
-                        android:textColor="#FFFFFF"
                         android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:background="@color/NewPurple"
+                        android:enabled="true"
                         android:text="Borrar Firma"
-                        android:enabled="true" />
+                        android:textColor="@color/white" />
                 </LinearLayout>
 
             </RelativeLayout>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/sendFormBtn"
+                style="@style/firmarBtn"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginBottom="32dp"
                 android:background="@drawable/backgroundnewtheme"
-
-                android:textColor="@color/white"
                 android:fontFamily="@font/montserrat_bold"
-                style="@style/firmarBtn"
                 android:text="Aceptar / Enviar"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textColor="@color/white"
 
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
