--- a/LineaExpres/app/src/main/res/layout/fragment_reqinscription.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_reqinscription.xml
@@ -75,14 +75,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/uploadSentriPhotoBtn"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
-                android:textSize="@dimen/globalFontSize"
                 android:text="@string/BtnUploadSentri"
-                style="@style/buttons" />
+                android:textSize="@dimen/globalFontSize" />
 
             <ImageView
                 android:id="@+id/SentriPhotoImageView"
@@ -113,18 +113,16 @@
                 android:inputType="date|number"/>
 
 
-
-
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/uploadOfficialIDPhotoBtn"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
-                style="@style/buttons"
-                android:textSize="@dimen/globalFontSize"
-                android:text="@string/BtnUploadOfficialID" />
+                android:text="@string/BtnUploadOfficialID"
+                android:textSize="@dimen/globalFontSize" />
 
             <ImageView
                 android:id="@+id/IdOficialPhotoImageView"
@@ -135,14 +133,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/uploadOfficialReverseIDPhotoBtn"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
-                android:textSize="@dimen/globalFontSize"
-                style="@style/buttons"
-                android:text="@string/BtnUploadOfficialIDReverse" />
+                android:text="@string/BtnUploadOfficialIDReverse"
+                android:textSize="@dimen/globalFontSize" />
 
             <ImageView
                 android:id="@+id/IdOficialReversePhotoImageView"
@@ -550,14 +548,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/uploadCirculationCardPhotoBtn"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
-                style="@style/buttons"
-                android:textSize="@dimen/globalFontSize"
-                android:text="@string/BtnUploadCirculationCard" />
+                android:text="@string/BtnUploadCirculationCard"
+                android:textSize="@dimen/globalFontSize" />
 
             <ImageView
                 android:id="@+id/TarjetaCirculacionPhotoImageView"
@@ -568,14 +566,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/uploadInsurancePolicyBtn"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
-                style="@style/buttons"
-                android:textSize="@dimen/globalFontSize"
-                android:text="@string/BtnUploadInsurancePolicy" />
+                android:text="@string/BtnUploadInsurancePolicy"
+                android:textSize="@dimen/globalFontSize" />
 
             <ImageView
                 android:id="@+id/PolizaSeguroPhotoImageView"
@@ -586,14 +584,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/uploadInsurancePolicyBtnSecond"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
-                style="@style/buttons"
-                android:textSize="@dimen/globalFontSize"
-                android:text="Hoja 2 Poliza Seguro (Si aplica)" />
+                android:text="Hoja 2 Poliza Seguro (Si aplica)"
+                android:textSize="@dimen/globalFontSize" />
 
             <ImageView
                 android:id="@+id/PolizaSeguroPhotoImageViewSecond"
@@ -604,14 +602,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/uploadUSAApprovalBtn"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
-                android:textSize="@dimen/globalFontSize"
-                style="@style/buttons"
-                android:text="@string/BtnUploadUSAApproval" />
+                android:text="@string/BtnUploadUSAApproval"
+                android:textSize="@dimen/globalFontSize" />
 
             <ImageView
                 android:id="@+id/AprovacionUSAPhotoImageView"
@@ -622,14 +620,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/uploadPowerAttorney"
+                style="@style/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
-                android:textSize="@dimen/globalFontSize"
-                style="@style/buttons"
-                android:text="@string/BtnUploadPowerAttorney" />
+                android:text="@string/BtnUploadPowerAttorney"
+                android:textSize="@dimen/globalFontSize" />
 
             <ImageView
                 android:id="@+id/CartaPoderPhotoImageView"
@@ -910,29 +908,27 @@
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/clear_button"
                         android:layout_width="match_parent"
-                        android:layout_weight="1"
-                        android:layout_margin="5dp"
-                        android:backgroundTint="#57348B"
-                        android:textColor="#FFFFFF"
                         android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:background="@color/NewPurple"
+                        android:enabled="true"
                         android:text="Borrar Firma"
-                        android:enabled="true" />
+                        android:textColor="@color/white" />
                 </LinearLayout>
 
             </RelativeLayout>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/sendFormBtn"
+                style="@style/firmarBtn"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginBottom="32dp"
                 android:background="@drawable/backgroundnewtheme"
-
-                android:textColor="@color/white"
                 android:fontFamily="@font/montserrat_bold"
-                style="@style/firmarBtn"
                 android:text="Aceptar / Enviar"
-                 />
+                android:textColor="@color/white" />
 
 
 
