--- a/LineaExpres/app/src/main/res/layout/fragment_sendpasschange.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_sendpasschange.xml
@@ -80,14 +80,14 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/NextStepChangePass"
                 style="@style/login_btns"
-                android:textSize="@dimen/globalFontSize"
                 android:layout_width="match_parent"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/backgroundnewtheme"
                 android:text="Continuar"
-               app:layout_constraintBottom_toTopOf="@+id/response"
+                android:textSize="@dimen/globalFontSize"
+                app:layout_constraintBottom_toTopOf="@+id/response"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -97,12 +97,11 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/merriweather_regular"
                 android:text="Revisa tu correo."
-                android:visibility="gone"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:textAlignment="center"
-                />
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
 
 
 
