--- a/LineaExpres/app/src/main/res/values/colors.xml
+++ b/LineaExpres/app/src/main/res/values/colors.xml
@@ -36,9 +36,9 @@
 
 
     <color name="GreenSuccess">#4BB543</color>
+    <color name="NewPurple">#57348B</color>
 
     <color name="Red">#e63629</color>
-
 
 
 </resources>
