--- a/LineaExpres/app/src/main/res/layout/fragment_add_adp.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_add_adp.xml
@@ -96,9 +96,9 @@
                     style="@style/buttons"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:fontFamily="@font/montserrat_bold"
                     android:layout_margin="5dp"
                     android:background="@drawable/backgroundnewtheme"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="Validar TAG"
                     android:textSize="@dimen/globalFontSize" />
             </LinearLayout>
@@ -106,45 +106,43 @@
 
         <ScrollView
             android:id="@+id/tagUploader"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:padding="15dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:padding="15dp"
-            >
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"
                     android:fontFamily="@font/montserrat_bold"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
                     android:text="Acceso Digital Peatonal"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="@dimen/globalFontSubs"
-                    android:layout_marginBottom="15dp"
-                    android:textStyle="bold"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
                     android:fontFamily="@font/montserrat_bold"
+                    android:padding="3dp"
                     android:text="Datos del usuario"
                     android:textColor="@color/black"
                     android:textSize="@dimen/globalFontSize"
                     android:textStyle="bold"
-                    android:padding="3dp"
-                    android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toTopOf="@+id/noSentriInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -153,19 +151,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_regular"
+                    android:padding="3dp"
                     android:text="Nombre(s)"
                     android:textColor="@color/black"
                     android:textSize="@dimen/globalFontSize"
                     android:textStyle="bold"
-                    android:padding="3dp"
                     app:layout_constraintBottom_toTopOf="@+id/noSentriInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
                 <EditText
                     android:id="@+id/NombresInput"
+                    style="@style/inputText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/inputText"
                     android:layout_marginBottom="8dp"
                     android:ems="10"
                     android:inputType="text"
@@ -177,19 +176,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_regular"
+                    android:padding="3dp"
                     android:text="Apellido(s)"
                     android:textColor="@color/black"
                     android:textSize="@dimen/globalFontSize"
                     android:textStyle="bold"
-                    android:padding="3dp"
                     app:layout_constraintBottom_toTopOf="@+id/noSentriInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
                 <EditText
                     android:id="@+id/ApellidosInput"
+                    style="@style/inputText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/inputText"
                     android:layout_marginBottom="8dp"
                     android:ems="10"
                     android:inputType="text"
@@ -200,27 +200,28 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_regular"
-                    android:text="Acceso Peatonal"
                     android:enabled="false"
-                    android:textIsSelectable="false"
+                    android:fontFamily="@font/merriweather_regular"
+                    android:padding="3dp"
+                    android:text="Acceso Peatonal"
                     android:textColor="@color/black"
+                    android:textIsSelectable="false"
                     android:textSize="@dimen/globalFontSize"
                     android:textStyle="bold"
-                    android:padding="3dp"
                     app:layout_constraintBottom_toTopOf="@+id/noSentriInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
                 <EditText
                     android:id="@+id/TagVehicleInput"
+                    style="@style/inputText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/inputText"
                     android:layout_marginBottom="8dp"
+                    android:clickable="false"
+                    android:editable="false"
                     android:ems="10"
                     android:enabled="false"
-                    android:editable="false"
-                    android:clickable="false"
                     android:inputType="text"
                     app:layout_constraintBottom_toTopOf="@+id/uploadSentriPhotoBtn"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -243,14 +244,15 @@
                     style="@style/buttons"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:fontFamily="@font/montserrat_bold"
                     android:layout_margin="5dp"
+                    android:background="@drawable/newcolorbluegraded"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="Agregar TAG"
                     android:textSize="@dimen/globalFontSize" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="15dp"/>
+                    android:layout_height="15dp" />
 
             </LinearLayout>
 
