--- a/LineaExpres/app/src/main/res/layout/fragment_add_telepeaje.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_add_telepeaje.xml
@@ -95,9 +95,9 @@
                     style="@style/buttons"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:fontFamily="@font/montserrat_bold"
                     android:layout_margin="5dp"
                     android:background="@drawable/newcolorbluegraded"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="Escanear TAG"
                     android:textSize="@dimen/globalFontSize" />
 
@@ -114,9 +114,9 @@
                     style="@style/buttons"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:fontFamily="@font/montserrat_bold"
                     android:layout_margin="5dp"
-                    android:background="@drawable/newcolorbluegraded"
+                    android:background="@drawable/backgroundnewtheme"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="Validar TAG"
                     android:textSize="@dimen/globalFontSize" />
             </LinearLayout>
@@ -124,45 +124,43 @@
 
         <ScrollView
             android:id="@+id/tagUploader"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:padding="15dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:padding="15dp"
-            >
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"
                     android:fontFamily="@font/montserrat_bold"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
                     android:text="Agregar vehículo de telepeaje"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="@dimen/globalFontSubs"
-                    android:layout_marginBottom="15dp"
-                    android:textStyle="bold"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
                     android:fontFamily="@font/montserrat_bold"
+                    android:padding="3dp"
                     android:text="Datos del vehículo"
                     android:textColor="@color/black"
                     android:textSize="@dimen/globalFontSize"
                     android:textStyle="bold"
-                    android:padding="3dp"
-                    android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toTopOf="@+id/noSentriInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -171,19 +169,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_regular"
+                    android:padding="3dp"
                     android:text="Año"
                     android:textColor="@color/black"
                     android:textSize="@dimen/globalFontSize"
                     android:textStyle="bold"
-                    android:padding="3dp"
                     app:layout_constraintBottom_toTopOf="@+id/noSentriInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
                 <EditText
                     android:id="@+id/YearVehicleInput"
+                    style="@style/inputText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/inputText"
                     android:layout_marginBottom="8dp"
                     android:ems="10"
                     android:inputType="text"
@@ -195,65 +194,70 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_regular"
+                    android:padding="3dp"
                     android:text="Marca"
                     android:textColor="@color/black"
                     android:textSize="@dimen/globalFontSize"
                     android:textStyle="bold"
-                    android:padding="3dp"
                     app:layout_constraintBottom_toTopOf="@+id/noSentriInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
                 <EditText
                     android:id="@+id/BrandVehicleInput"
+                    style="@style/inputText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/inputText"
                     android:layout_marginBottom="8dp"
                     android:ems="10"
                     android:inputType="text"
                     app:layout_constraintBottom_toTopOf="@+id/uploadSentriPhotoBtn"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_regular"
+                    android:padding="3dp"
                     android:text="Modelo"
                     android:textColor="@color/black"
                     android:textSize="@dimen/globalFontSize"
                     android:textStyle="bold"
-                    android:padding="3dp"
                     app:layout_constraintBottom_toTopOf="@+id/noSentriInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
                 <EditText
                     android:id="@+id/ModelVehicleInput"
+                    style="@style/inputText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/inputText"
                     android:layout_marginBottom="8dp"
                     android:ems="10"
                     android:inputType="text"
                     app:layout_constraintBottom_toTopOf="@+id/uploadSentriPhotoBtn"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_regular"
+                    android:padding="3dp"
                     android:text="Color"
                     android:textColor="@color/black"
                     android:textSize="@dimen/globalFontSize"
                     android:textStyle="bold"
-                    android:padding="3dp"
                     app:layout_constraintBottom_toTopOf="@+id/noSentriInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
                 <EditText
                     android:id="@+id/ColorVehicleInput"
+                    style="@style/inputText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/inputText"
                     android:layout_marginBottom="8dp"
                     android:ems="10"
                     android:inputType="text"
@@ -265,19 +269,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_regular"
+                    android:padding="3dp"
                     android:text="Número de placas"
                     android:textColor="@color/black"
                     android:textSize="@dimen/globalFontSize"
                     android:textStyle="bold"
-                    android:padding="3dp"
                     app:layout_constraintBottom_toTopOf="@+id/noSentriInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
                 <EditText
                     android:id="@+id/PlatesVehicleInput"
+                    style="@style/inputText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/inputText"
                     android:layout_marginBottom="8dp"
                     android:ems="10"
                     android:inputType="text"
@@ -289,49 +294,52 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_regular"
+                    android:padding="3dp"
                     android:text="Número de serie (VIN Number)"
                     android:textColor="@color/black"
                     android:textSize="@dimen/globalFontSize"
                     android:textStyle="bold"
-                    android:padding="3dp"
                     app:layout_constraintBottom_toTopOf="@+id/noSentriInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
                 <EditText
                     android:id="@+id/VIMNumberInput"
+                    style="@style/inputText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/inputText"
                     android:layout_marginBottom="8dp"
                     android:ems="10"
                     android:inputType="text"
                     app:layout_constraintBottom_toTopOf="@+id/uploadSentriPhotoBtn"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_regular"
-                    android:text="TAG"
                     android:enabled="false"
-                    android:textIsSelectable="false"
+                    android:fontFamily="@font/merriweather_regular"
+                    android:padding="3dp"
+                    android:text="TAG"
                     android:textColor="@color/black"
+                    android:textIsSelectable="false"
                     android:textSize="@dimen/globalFontSize"
                     android:textStyle="bold"
-                    android:padding="3dp"
                     app:layout_constraintBottom_toTopOf="@+id/noSentriInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
                 <EditText
                     android:id="@+id/TagVehicleInput"
+                    style="@style/inputText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/inputText"
                     android:layout_marginBottom="8dp"
+                    android:clickable="false"
+                    android:editable="false"
                     android:ems="10"
                     android:enabled="false"
-                    android:editable="false"
-                    android:clickable="false"
                     android:inputType="text"
                     app:layout_constraintBottom_toTopOf="@+id/uploadSentriPhotoBtn"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -366,14 +374,14 @@
                     style="@style/buttons"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:fontFamily="@font/montserrat_bold"
                     android:layout_margin="5dp"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="Agregar TAG"
                     android:textSize="@dimen/globalFontSize" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="15dp"/>
+                    android:layout_height="15dp" />
 
             </LinearLayout>
 
