--- a/LineaExpres/app/src/main/res/layout/fragment_crearcita.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_crearcita.xml
@@ -56,13 +56,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/checkDate"
+                style="@style/login_btns"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                style="@style/login_btns"
-                android:textStyle="bold"
-                android:textSize="@dimen/globalFontSize"
                 android:layout_marginBottom="16dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:text="Ver disponibilidad"
+                android:textSize="@dimen/globalFontSize"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/DataHourTitle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -108,13 +109,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/confirmDate"
+                style="@style/login_btns"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                style="@style/login_btns"
-                android:textStyle="bold"
-                android:textSize="@dimen/globalFontSize"
                 android:layout_marginBottom="16dp"
+                android:background="@drawable/backgroundnewtheme"
                 android:text="Confirmar Cita"
+                android:textSize="@dimen/globalFontSize"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
