--- a/LineaExpres/app/src/main/res/layout/fragment_recharge.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_recharge.xml
@@ -39,46 +39,47 @@
                     android:id="@+id/LineaExpresLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:visibility="gone"
                     android:orientation="vertical"
                     android:padding="15dp"
-                    app:layout_constraintBottom_toBottomOf="parent">
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/OriginVehTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/montserrat_bold"
+                        android:paddingLeft="6dp"
+                        android:paddingRight="6dp"
                         android:text="Seleccione el origen de su tarjeta"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="@dimen/globalFontSubs"
                         android:textStyle="bold"
-                        android:paddingLeft="6dp"
-                        android:paddingRight="6dp"
                         app:layout_constraintBottom_toTopOf="@+id/noSentriInput"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="5dp"
                         android:layout_marginTop="5dp"
-                        >
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal">
+
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btnMX"
+                            style="@style/buttons2"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginRight="-10dp"
                             android:layout_weight="1"
                             android:fontFamily="@font/montserrat_bold"
-                            style="@style/buttons2"
-                            android:textSize="@dimen/globalFontSize"
-                            android:layout_marginRight="-10dp"
-                            android:text="México" />
+                            android:text="México"
+                            android:textSize="@dimen/globalFontSize" />
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btnUSA"
@@ -91,38 +92,40 @@
                             android:text="USA"
                             android:textSize="@dimen/globalFontSize" />
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="10dp"/>
+                        android:layout_height="10dp" />
+
                     <TextView
                         android:id="@+id/AdscrPuenteTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/montserrat_bold"
+                        android:padding="3dp"
                         android:text="Cantidad a cargar en pesos mexicanos"
                         android:textColor="@color/black"
                         android:textSize="@dimen/globalFontSize"
-                        android:textStyle="bold"
-                        android:padding="3dp" />
+                        android:textStyle="bold" />
 
                     <LinearLayout
                         android:id="@+id/saldoSegment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="5dp"
                         android:layout_marginTop="5dp"
-                        >
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal">
+
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btnSaldo1"
+                            style="@style/buttons2"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginRight="-10dp"
                             android:layout_weight="1"
                             android:fontFamily="@font/montserrat_bold"
-                            style="@style/buttons2"
-                            android:textSize="@dimen/globalFontSize"
-                            android:layout_marginRight="-10dp"
-                            android:text="---" />
+                            android:text="---"
+                            android:textSize="@dimen/globalFontSize" />
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btnSaldo2"
@@ -135,44 +138,46 @@
                             android:text="---"
                             android:textSize="@dimen/globalFontSize" />
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="10dp"/>
+                        android:layout_height="10dp" />
+
                     <TextView
                         android:id="@+id/LineamientosLblTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="TAG Seleccionado"
                         android:layout_marginBottom="8dp"
-                        android:textSize="15sp"
-                        android:textColor="@color/black"
                         android:fontFamily="@font/montserrat_bold"
+                        android:text="TAG Seleccionado"
+                        android:textColor="@color/black"
+                        android:textSize="15sp"
                         app:layout_constraintStart_toStartOf="parent" />
 
                     <EditText
                         android:id="@+id/tagSelected"
+                        style="@style/inputText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        style="@style/inputText"
                         android:layout_marginBottom="8dp"
                         android:ems="10"
-                        android:textIsSelectable="false"
                         android:enabled="false"
                         android:inputType="text"
-                        />
+                        android:textIsSelectable="false" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="10dp"/>
+                        android:layout_height="10dp" />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btnRecargar"
+                        style="@style/buttons2"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:fontFamily="@font/montserrat_bold"
-                        style="@style/buttons2"
-                        android:textSize="@dimen/globalFontSize"
-                        android:text="Continuar" />
+                        android:text="Continuar"
+                        android:textSize="@dimen/globalFontSize" />
 
                 </LinearLayout>
                 <LinearLayout
