--- a/LineaExpres/app/src/main/res/layout/fragment_register.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_register.xml
@@ -116,12 +116,12 @@
                             android:id="@+id/smsLabel"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/black"
                             android:layout_marginBottom="16dp"
-                            android:visibility="gone"
-                            android:textSize="13sp"
                             android:fontFamily="@font/merriweather_regular"
                             android:text="Recibirá un código mediante un SMS"
+                            android:textColor="@color/black"
+                            android:textSize="13sp"
+                            android:visibility="gone"
                             app:layout_constraintBottom_toTopOf="@+id/EnterCode"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent" />
@@ -145,14 +145,15 @@
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/ConfirmCode"
+                            style="@style/login_btns"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="26dp"
-                            style="@style/login_btns"
+                            android:background="@drawable/newcolorbluegraded"
+                            android:text="Confirmar Código"
+                            android:textSize="@dimen/globalFontSize"
                             android:textStyle="bold"
                             android:visibility="gone"
-                            android:textSize="@dimen/globalFontSize"
-                            android:text="Confirmar Código"
                             app:layout_constraintBottom_toTopOf="@+id/codeLbl"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent" />
@@ -174,41 +175,43 @@
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/BtnReSendCode"
+                            style="@style/login_btns"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="26dp"
-                            style="@style/login_btns"
+                            android:background="@drawable/newcolorbluegraded"
+                            android:text="Genera uno nuevo"
+                            android:textSize="@dimen/globalFontSize"
                             android:textStyle="bold"
                             android:visibility="gone"
-                            android:textSize="@dimen/globalFontSize"
-                            android:text="Genera uno nuevo"
                             app:layout_constraintBottom_toTopOf="@+id/btnWrongNumber"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent" />
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btnWrongNumber"
+                            style="@style/login_btns"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="26dp"
-                            style="@style/login_btns"
+                            android:background="@drawable/newcolorbluegraded"
+                            android:text="Me equivoqué de número"
+                            android:textSize="@dimen/globalFontSize"
                             android:textStyle="bold"
                             android:visibility="gone"
-                            android:textSize="@dimen/globalFontSize"
-                            android:text="Me equivoqué de número"
                             app:layout_constraintBottom_toTopOf="@+id/RegisterUser"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent" />
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/RegisterUser"
+                            style="@style/login_btns"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            style="@style/login_btns"
-                            android:textStyle="bold"
-                            android:textSize="@dimen/globalFontSize"
-                            android:text="Registrar"
                             android:background="@drawable/backgroundnewtheme"
+                            android:text="Registrar"
+                            android:textSize="@dimen/globalFontSize"
+                            android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent" />
