--- a/LineaExpres/app/src/main/res/layout/recarga_vehiculos_plantilla.xml
+++ b/LineaExpres/app/src/main/res/layout/recarga_vehiculos_plantilla.xml
@@ -1,142 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:backgroundTint="#FDFDFD"
     android:orientation="vertical">
 
-    <ScrollView
-        style="@style/global_rounded"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="100dp"
-        android:padding="@dimen/boxPadding"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:padding="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
 
-        >
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="Cargando..."
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/vehicleImg"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:src="@drawable/telepeaje" />
+
+        <TextView
+            android:id="@+id/modeloText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="Cargando..."
+            android:textColor="@color/black"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/placasText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="Cargando..."
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="10dp" />
+
+        <TextView
+            android:id="@+id/tagText"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:orientation="vertical"
-            android:padding="15dp"
-            android:visibility="visible"
+            android:fontFamily="@font/merriweather_regular"
+            android:text="Tag: cargando..."
+            android:textColor="@color/black" />
 
-            >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
 
-            <TextView
-                android:id="@+id/type"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat_bold"
-                android:text="Cargando..."
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
+        <TextView
+            android:id="@+id/saldoText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/merriweather_regular"
+            android:text="Saldo: cargando..."
+            android:textColor="@color/black" />
 
-            <ImageView
-                android:id="@+id/vehicleImg"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@drawable/telepeaje" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
 
-            <TextView
-                android:id="@+id/modeloText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat_bold"
-                android:text="Cargando..."
-                android:textColor="@color/black"
-                android:textSize="24sp" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnRecarga"
+            style="@style/buttons2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:background="@drawable/newcolorbluegraded"
+            android:fontFamily="@font/montserrat_bold"
+            android:padding="10dp"
+            android:text="Recargar" />
 
-            <TextView
-                android:id="@+id/placasText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat_bold"
-                android:text="Cargando..."
-                android:textSize="18sp" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnMisCruces"
+            style="@style/buttons2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:background="@drawable/backgroundnewtheme"
+            android:fontFamily="@font/montserrat_bold"
+            android:padding="10dp"
+            android:text="Ver mis cruces" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="10dp" />
-
-            <TextView
-                android:id="@+id/tagText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/merriweather_regular"
-                android:text="Tag: cargando..."
-                android:textColor="@color/black" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="10dp" />
-
-            <TextView
-                android:id="@+id/saldoText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/merriweather_regular"
-                android:text="Saldo: cargando..."
-                android:textColor="@color/black" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="10dp" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnRecarga"
-                style="@style/buttons2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="@drawable/newcolorbluegraded"
-                android:fontFamily="@font/montserrat_bold"
-                android:padding="10dp"
-                android:text="Recargar" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnMisCruces"
-                style="@style/buttons2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="@drawable/backgroundnewtheme"
-                android:fontFamily="@font/montserrat_bold"
-                android:padding="10dp"
-                android:text="Ver mis cruces" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnMisCruces2"
-                style="@style/buttons2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="#63239D"
-                android:fontFamily="@font/montserrat_bold"
-                android:padding="10dp"
-                android:text="Eliminar Tag"
-
-                />
-        </LinearLayout>
-    </ScrollView>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnMisCruces2"
+            style="@style/buttons2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:background="@drawable/newpurlpebtn"
+            android:fontFamily="@font/montserrat_bold"
+            android:padding="10dp"
+            android:text="Eliminar TAG" />
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/MainBorraTagLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@color/colorblackopac"
         android:paddingBottom="100dp"
         android:visibility="gone"
@@ -204,7 +184,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:background="#57348B"
+                    android:background="@drawable/newpurlpebtn"
                     android:fontFamily="@font/montserrat_bold"
                     android:text="Cancelar"
                     android:textSize="@dimen/globalFontSize"
