se hizo la verificación de el tag existence al colocarlo al inicio y se quitó el botón de eliminar tag en linea express

--- a/LineaExpres/app/src/main/res/layout/fragment_add_telepeaje.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_add_telepeaje.xml
@@ -80,15 +80,18 @@
 
                 <EditText
                     android:id="@+id/tagValue"
+                    style="@style/inputText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/inputText"
                     android:layout_marginBottom="8dp"
                     android:ems="10"
+                    android:hint="Captura o Escanea tu TAG"
                     android:inputType="text"
                     app:layout_constraintBottom_toTopOf="@+id/uploadSentriPhotoBtn"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:maxLength="13"
+                    />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/scanTAG"
